test_regress/t/t_recursive_typedef_bad.out
%Error: t/t_recursive_typedef_bad.v:11:30: Recursive type definition
                                         : ... note: In instance 't.u_circ'
        t/t_recursive_typedef_bad.v:11:30: ... Type chain: PARAMTYPEDTYPE 'A'
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                              ^
        t/t_recursive_typedef_bad.v:11:34: ... Type chain: REFDTYPE 'B'
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                                  ^
        t/t_recursive_typedef_bad.v:11:52: ... Type chain: PARAMTYPEDTYPE 'B'
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                                                    ^
        t/t_recursive_typedef_bad.v:11:56: ... Type chain: REFDTYPE 'A'
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                                                        ^
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                              ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_recursive_typedef_bad.v:11:52: Recursive type definition
                                         : ... note: In instance 't.u_circ'
        t/t_recursive_typedef_bad.v:11:52: ... Type chain: PARAMTYPEDTYPE 'B'
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                                                    ^
        t/t_recursive_typedef_bad.v:11:56: ... Type chain: REFDTYPE 'A'
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                                                        ^
        t/t_recursive_typedef_bad.v:11:30: ... Type chain: PARAMTYPEDTYPE 'A'
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                              ^
        t/t_recursive_typedef_bad.v:11:34: ... Type chain: REFDTYPE 'B'
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                                  ^
   11 | module circ #(parameter type A = B, parameter type B = A)
      |                                                    ^
%Error: Exiting due to
